# drs_tim4_2025-26

./: .gitignore  README.md
client/: package.json
client/src/: App.tsx  main.tsx
client/src/api_services/air-company/: AirCompanyAPIService.ts  IAirCompanyAPIService.ts
client/src/api_services/auth/: AuthAPIService.ts  IAuthAPIService.ts
client/src/api_services/flight/: FlightApiService.ts  IFlightAPIService.ts
client/src/api_services/ticket/: ITicketAPIService.ts  TicketAPIService.ts
client/src/api_services/users/: IUserAPIService.ts  UserAPIService.ts
client/src/components/: Navbar.tsx
client/src/components/autentifikacija/: AutentifikacionaForma.tsx
client/src/components/flights/: CreateFlight.tsx  EditFlight.tsx  FlightForm.tsx  FlightList.tsx  FlightsByAirCompany.tsx
client/src/components/tickets/: CreateTicket.tsx  EditTicket.tsx  TicketList.tsx
client/src/components/users/: EditUserForm.tsx  UserDetail.tsx  UserList.tsx
client/src/enums/: UserRoles.ts
services/flight-service/: app.py  pyproject.toml
services/flight-service/DTO/: FlightCreateDTO.py
services/flight-service/Domen/Config/: config.py
services/flight-service/Domen/Models/: BoughtTickets.py  Flights.py
services/flight-service/Routes/: BoughtTicketsRoutes.py  FlightsRoutes.py
services/flight-service/Services/: BoughtTicketsService.py  FlightsService.py  ReportService.py
services/flight-service/workers/: celery_client.py
services/mailing-service/: pyproject.toml
services/mailing-service/app/: __init__.py  config.py  extensions.py  tasks.py
services/server/: Dockerfile  README.md  app.py  compose.yaml  pyproject.toml
services/server/DTO/: UserDTO.py
services/server/Domen/Enums/: Genders.py  UserRoles.py
services/server/Domen/Models/: Users.py
services/server/Routes/: Gateway.py  UserRoutes.py
services/server/Services/: UserService.py
(+11 files in other folders)
