[project]
name = "flight-service"
version = "0.1.0"
description = "Poetry init for flight-service"

requires-python = ">=3.12, <4.0"
dependencies = [
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "flask (>=3.1.2,<4.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "celery (>=5.6.2,<6.0.0)",
    "cryptography (>=46.0.4,<47.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"