[project]
name = "mailing-service"
version= "0.1.0"
description = "Poetry init for mailing-service"

requires-python = ">=3.12, <4.0"
dependencies = [
    "flask  (>=3.1.2,<4.0.0)",
    "flask-mail (>=0.10.0,<0.11.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "celery (>=5.6.2,<6.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "resend (>=2.21.0,<3.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

